mais coisas do evento

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,6 +32,16 @@
     border-color: #C28008;
   }
   
+  .msg {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    width: 100%;
+    margin-bottom: 0;
+    text-align: center;
+    padding: 10px;
+  }
+
   /* navbar */
   #navbar img {
     width: 40px;
@@ -52,9 +62,9 @@
     color: #F2A340;
   }
   
-  /* Search Container */
+  /* container de search */
   #search-container {
-    background-image: url("../img/banner.jpg");
+    background-image: url("../img/1.jpg");
     background-size: cover;
     background-position: center;
     height: 400px;
@@ -73,7 +83,7 @@
     margin: 0 auto;
   }
   
-  /* Events list */
+  /* Lista de eventos */
   #events-container {
     padding: 50px;
   }
@@ -92,11 +102,11 @@
   }
   
   #events-container .card {
-    flex: 1 1 0;
+    flex: 1 1 24%;
     max-width: 25%;
     border-radius: 10px;
     padding: 0;
-    margin: 5px;
+    margin: .5%;
   }
   
   #events-container img {
@@ -122,7 +132,7 @@
     color: #757575;
   }
   
-  /* Event create page */
+  /* Pagina de criação de eventos */
 #event-create-container {
     padding: 30px
   }
@@ -136,6 +146,43 @@
   #event-create-container textarea {
     font-size: 12px;
   }
+
+  /* Pagina dos Eventos */
+#image-container,
+#info-container {
+  margin-top: 30px;
+}
+
+#image-container img {
+  border-radius: 10px;
+}
+
+#info-container h1 {
+  font-size: 36px;
+  font-weight: 900;
+}
+
+#info-container p {
+  margin: 0;
+  font-size: 14px;
+  display: flex;
+}
+
+#info-container h3,
+#description-container h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#info-container ion-icon {
+  font-size: 20px;
+  color: #F2A340;
+  margin-right: 5px;
+}
+
+#info-container #event-submit {
+  margin: 20px 0;
+}
   
   /* footer */
   footer {
