--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -189,6 +189,16 @@
   padding-left: 0;
 }
 
+/* Dashboard */
+.dashboard-title-container {
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.dashboard-events-container th {
+  width: 25%;
+}
+
   /* footer */
   footer {
     text-align: center;
