--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -199,6 +199,10 @@
   width: 25%;
 }
 
+.dashboard-events-container form {
+  display: inline-block;
+}
+
   /* footer */
   footer {
     text-align: center;
