--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -203,6 +203,13 @@
   display: inline-block;
 }
 
+/* Edit page */
+
+.img-preview {
+  width: 100px;
+  margin-top: 20px;
+}
+
   /* footer */
   footer {
     text-align: center;
